# sunbeam

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  __init__.py  compiled.Dockerfile  default-docker.json  default-process.json  docker-compose.yml  docker_worker.Dockerfile  docker‐job‐template.json  external.Dockerfile  job_template.json  local.Dockerfile  process_worker.Dockerfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
config/: __init__.py  events.toml  ingress.toml  models.py  sunbeam.toml
credentials/: __init__.py  influx_credentials.py
data_pipeline/: Dockerfile  __init__.py  context.py  create_deployment.py  data_pipeline.py  deploy.py  influx_credentials.py  ingest.toml  overseer.py  pipeline.Dockerfile  pipeline.py  prefect_worker.Dockerfile  pyproject.toml  worker.py
data_pipeline/config/: FSDataSource.toml  __init__.py  events.toml  ingest.toml  ingress.toml  models.py  sunbeam.toml
data_pipeline/data_source/: __init__.py  data_source_factory.py  fs_data_source.py  influxdb_data_source.py  mongodb_data_source.py
data_pipeline/stage/: __init__.py  energy_stage.py  ingest_stage.py  ingress_stage.py  power_stage.py  stage.py  stage_registry.py
data_source/: __init__.py  data_source_factory.py  fs_data_source.py  influxdb_data_source.py  mongodb_data_source.py  sunbeam_data_source.py
deployment/: create_deployment.py
docs/: CONFIGURATION.md  CONTAINERS.md  INFLUXDB_CACHING.md  ROUTING.md  STATIC_DATA.md  SUNBEAM.md
fuse_layer/fuse_layer/: database.py  fuse_layer.py
logs/: __init__.py  _sunbeam_logger.py
pipeline/: Dockerfile  __init__.py  collect.py  configure.py  run.py
prefect_worker/: Dockerfile
stage/: __init__.py  array_stage.py  cleanup_stage.py  context.py  efficiency_stage.py  energy_stage.py  ingress_stage.py  localization_stage.py  power_stage.py  soc_stage.py  stage.py  weather_stage.py
stage/energy/: battery_configuration.toml
stage/energy/FSGP_2024_Day_1/: initial_state.toml
stage/energy/FSGP_2025_Day_2/: kalman_filter_config.toml
stage/localization/FSGP_2024_Day_1/: coords.toml
stage/localization/June_8th_Testing/: coords.toml
tests/: load_from_fsdata.py  plot_bin_file.py
