[build-system]
requires = ["setuptools<75", "setuptools-scm<8.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sunbeam"
version = "0.1.0"
description = "UBC Solar's data pipeline: logic, distribution, storage, and infrastructure"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
  { name = "UBC Solar Strategy", email = "strategy@ubcsolar.com" }
]
keywords = ["data", "pipeline", "UBC", "solar"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Data Processing"
]
dependencies = [
  "pydantic>=2.8.2,<3.0",
  "toml>=0.10.2,<1.0",
  "prefect>=2.20.2,<3.0",
  "prefect-github>=0.2.7,<1.0",
  "python-dotenv>=1.0.1,<2.0",
  "pymongo>=4.8.0,<5.0",
  "tqdm>=4.66.5,<5.0",
  "ubc-solar-data-tools>=1.9.0,<2.0",
  "dill>=0.3.9,<1.0",
  "networkx>=3.4.2,<4.0"
]

[project.optional-dependencies]
external = [
  "flask[async]>=3.0.3,<4.0",
  "bokeh>=3.6.2,<4.0",
  "redis>=5.2.1,<6.0",
  "docker>=7.1.0"
]
test = [
  "pytest>=8.3.3,<9.0"
]

[tool.setuptools]
packages = []
